# umbra

./: .gitignore  CMakeLists.txt  compile.sh  main.cpp
examples/: example_init_window.cpp
examples/textures/: example_textured_quad.cpp
include/umbra/: core.hpp  export_macros.h  file_system.h  gl_include.hpp  keycode.hpp  renderer.hpp  types.h  types.hpp  ugui.h  uinput.h  umath.h  umbra.h  umbragl.h  urenderer.h  utils.hpp  window.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
resources/shaders/: basic.frag.glsl  basic.vert.glsl  default.frag.glsl  default.vert.glsl
src/: renderer.c  renderer.cpp  ugui.c  uinput.c  umath.c  umbra.c  umbragl.c  urenderer.c  uwindow.c  window.cpp
